--- a/.github/workflows/onPush.yaml
+++ b/.github/workflows/onPush.yaml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
+        with:
+          fetch-depth: 1
 
       - name: Cache Modules
         uses: actions/cache@v1
