--- a/codecov.yml
+++ b/codecov.yml
@@ -4,3 +4,9 @@ coverage:
       default:
         target: 95
         informational: true
+
+    patch:
+      default:
+        target: auto
+        informational: true
+
