Fix coverage paths for Pester v5.

--- a/.github/workflows/onPush.yaml
+++ b/.github/workflows/onPush.yaml
@@ -17,10 +17,11 @@ jobs:
           . ./cd-extras/public/_Classes.ps1
           md ./_reports
           Import-Module Pester
-          Invoke-Pester ./tests/cd-extras.Tests.ps1 -EnableExit -CodeCoverage ./cd-extras/private/*.ps1,./cd-extras/public/*.ps1 -CodeCoverageOutputFile ./_reports/coverage.xml -OutputFile ./_reports/testresults.xml
+          cd tests
+          Invoke-Pester ./cd-extras.Tests.ps1 -EnableExit -CodeCoverage ../cd-extras/private/*.ps1,../cd-extras/public/*.ps1 -CodeCoverageOutputFile ../_reports/coverage.xml -OutputFile ../_reports/testresults.xml
         shell: pwsh
 
-      # run the tests again on WIndows, this time in PowerShell v5
+      # run the tests again on Windows, this time in PowerShell v5
       - name: Run the tests (Powershell v5)
         if: matrix.os == 'windows-latest'
         run: |
